[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites.png" type="Texture" id=1]
[ext_resource path="res://space.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.10268, 9.10273 )

[node name="space" type="Control"]
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 12.8067, 12.8067 )
scale = Vector2( 2.19715, 2.19715 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3.27394, 3.27395 )
z_index = 1
shape = SubResource( 1 )

[node name="Hover" type="ColorRect" parent="."]
visible = false
margin_left = -4.0
margin_top = -4.0
margin_right = 44.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( -108, 0 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
color = Color( 0.109804, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 12.8067, 12.8067 )
scale = Vector2( 2.19715, 2.19715 )
texture = ExtResource( 1 )
vframes = 4
hframes = 5

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 31.8496, 31.8496 )
scale = Vector2( 1.50113, 1.50113 )
texture = ExtResource( 1 )
vframes = 4
hframes = 5
frame = 4
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
